--- a/config.org
+++ b/config.org
@@ -87,12 +87,12 @@
        eshell            ; the elisp shell that works everywhere
        ;;shell             ; simple shell REPL for Emacs
        ;;term              ; basic terminal emulator for Emacs
-       ;;vterm             ; the best terminal emulation in Emacs
+       vterm             ; the best terminal emulation in Emacs
 
        :checkers
        (syntax +childframe
                +icons)              ; tasing you for every semicolon you forget
-       (spell +flyspell) ; tasing you for misspelling mispelling
+       ;; (spell +flyspell) ; tasing you for misspelling mispelling
        grammar           ; tasing grammar mistake every you make
 
        :tools
@@ -1165,7 +1165,7 @@ Use doom's evil keybindings for dirvish
   (eat-mode . goto-address-mode))
 #+end_src
 * Checkers
-** COMMENT Jinx
+** Jinx
 #+begin_src emacs-lisp :tangle packages.el
 (package! jinx)
 #+end_src
